2014-02-03  Markus Trippelsdorf  <markus@trippelsdorf.de>

	* doc/invoke.texi: (fprofile-reorder-functions): Fix typo.

2014-02-03  Andrey Belevantsev  <abel@ispras.ru>

	PR rtl-optimization/57662
	* sel-sched.c (code_motion_path_driver): Do not mark already not
	existing blocks in the visiting bitmap.

2014-02-03  Andrey Belevantsev  <abel@ispras.ru>

	* sel-sched-ir.c (sel_gen_insn_from_expr_after): Reset INSN_DELETED_P
	on the insn being emitted.

2014-02-03  James Greenhalgh  <james.greenhalgh@arm.com>
	    Will Deacon  <will.deacon@arm.com>

	* doc/gimple.texi (gimple_asm_clear_volatile): Remove.

2014-02-03  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/arm/arm-tables.opt: Regenerate.

2014-02-02  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/rs6000.c (altivec_expand_vec_perm_le): Generalize
	for vector types other than V16QImode.
	* config/rs6000/altivec.md (altivec_vperm_<mode>): Change to a
	define_expand, and call altivec_expand_vec_perm_le when producing
	code with little endian element order.
	(*altivec_vperm_<mode>_internal): New insn having previous
	behavior of altivec_vperm_<mode>.
	(altivec_vperm_<mode>_uns): Change to a define_expand, and call
	altivec_expand_vec_perm_le when producing code with little endian
	element order.
	(*altivec_vperm_<mode>_uns_internal): New insn having previous
	behavior of altivec_vperm_<mode>_uns.

2014-02-02  Bill Schmidt  <wschmidt@linux.vnet.ibm.com>

	* config/rs6000/altivec.md (UNSPEC_VSUMSWS_DIRECT): New unspec.
	(altivec_vsumsws): Add handling for -maltivec=be with a little
	endian target.
	(altivec_vsumsws_direct): New.
	(reduc_splus_<mode>): Call gen_altivec_vsumsws_direct instead of
	gen_altivec_vsumsws.

2014-02-02  Jan Hubicka  <jh@suse.cz>

	* ipa-devirt.c (subbinfo_with_vtable_at_offset,
	vtable_pointer_value_to_binfo): New functions.
	* ipa-utils.h (vtable_pointer_value_to_binfo): Declare.
	* ipa-prop.c (extr_type_from_vtbl_ptr_store): Use it.
