@@ -1,3 +1,8 @@
+2014-02-03  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR rtl-optimization/60024
+	* sel-sched.c (init_regs_for_mode): Check if mode is OK first.
+
 2014-02-03  Markus Trippelsdorf  <markus@trippelsdorf.de>
 
 	* doc/invoke.texi: (fprofile-reorder-functions): Fix typo.
